2024CR114	2/6/2024	MikeR	bug	"  CT3ScoreUtils.setItemResponseGroupData() testEventId=2179 java.lang.Exception: ItemResponseGroup() TestEventScore.intParam2 IncludeItemScoresType is invalid for an ItemResponseGroup. TestEventScore{testEventScoreId=12505, testEventId=2179, testEventScoreStatusTypeId=0, testEventScoreTypeId=1, name=B - Dichot - Pct Correct, nameEnglish=B - Dichot - Pct Correct}         at com.tm2batch.account.results.ItemResponseGroup.<init>(ItemResponseGroup.java:48)         at com.tm2batch.account.results.ct2.CT3ScoreUtils.computeItemResponseGroupData(CT3ScoreUtils.java:151) [2024-02-06T15:24:17.034+0000] [Payara 6.2023.12] [FINE] [] [com.tm2batch] [tid: _ThreadID=2968 _ThreadName=Thread-45] [timeMillis: 1707233057034] [levelValue: 500] [CLASSNAME: com.tm2batch.service.LogService] [METHODNAME: logIt] [[   TestResultExporter.getTestResultExcelFile() java.lang.NullPointerException: Cannot invoke ""com.tm2batch.entity.event.TestKey.getCreditId()"" because the return value of ""com.tm2batch.custom.result.TestResult.getTestKey()"" is null         at com.tm2batch.custom.result.TestResultExporter.getTestResultExcelFile(TestResultExporter.java:936) "
2024CR113	2/6/2024	MikeR	feature	Create ability to run a batch report manually from inside the admin site.